# TIS3-Fitzgerald

./: Kaffee_Tee_Mate_und_Gewuerze_2021-2025.csv  PitchDeck.pptx  README.md  pyproject.toml  visualalisation.ipynb
.devcontainer/: Dockerfile  devcontainer.json  fix_perms.sh  setup.sh
data/: Kaffee_Tee_Mate_und_Gewuerze_2007-2025.csv  Kaffee_Tee_Mate_und_Gewuerze_2007-2025_cleaned.csv  Kaffee_Tee_Mate_und_Gewuerze_2021-2025.csv  Kaffee_Tee_Mate_und_Gewuerze_2021-2025_cleaned.csv
docu/: Docu.md
results/: final_predictions.csv  forecast_results_all_models.csv  forecast_results_baseline.csv  forecast_results_import_qty_kg_all_models.csv  forecast_results_import_qty_kg_future_only.csv  forecast_results_import_value_eur_future_only.csv  forecast_results_import_value_eur_real_2025_all_models.csv  forecast_results_import_value_eur_real_2025_future_only.csv  forecast_results_statistical.csv
src/: basic_forecast.ipynb  forecast_import_qty_kg.ipynb  forecast_import_value_eur.ipynb  forecast_import_value_eur_real_2025.ipynb  metrics_pipeline.py  plot_creation_for_docu.ipynb  shared_forecast_utils.py  visualalisation.ipynb
src/lightning_logs/version_0/: events.out.tfevents.1767093960.da964ae55179
src/lightning_logs/version_1/: events.out.tfevents.1767093969.da964ae55179  hparams.yaml
src/lightning_logs/version_10/: events.out.tfevents.1767094056.da964ae55179  hparams.yaml
src/lightning_logs/version_100/: events.out.tfevents.1767124824.da964ae55179
src/lightning_logs/version_101/: events.out.tfevents.1767124834.da964ae55179
src/lightning_logs/version_102/: events.out.tfevents.1767124835.da964ae55179
src/lightning_logs/version_103/: events.out.tfevents.1767124994.da964ae55179
src/lightning_logs/version_104/: events.out.tfevents.1767124994.da964ae55179
src/lightning_logs/version_105/: events.out.tfevents.1767125009.da964ae55179
src/lightning_logs/version_106/: events.out.tfevents.1767125009.da964ae55179
src/lightning_logs/version_107/: events.out.tfevents.1767125142.da964ae55179
(+132 files in other folders)
