[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "timeseries-lab"
version = "0.1.0"
description = "Time series analysis with Nixtla + baselines, statistical, ML, and neural forecasting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

dependencies = [
  # Core
  "numpy",
  "pandas",
  "polars",
  "scipy",

  # Plotting / EDA
  "matplotlib",
  "missingno",
  "plotly",

  # Diagnostics: ACF/PACF, STL decomposition, residual tests
  "statsmodels",

  # Nixtla ecosystem (baseline + statistical + neural + ML)
  "statsforecast",
  "neuralforecast",
  "mlforecast",

  # ML backends for MLForecast
  "scikit-learn",
  "lightgbm",
  "xgboost",

  # ARIMA / Auto-ARIMA (classic auto_arima API)
  "pmdarima",

  # Notebook runtime
  "jupyterlab",
  "ipykernel",

  # Util
  "tqdm",
  "joblib",

  # Dev / QA (installed by default to keep uv install consistent)
  "pytest",
  "ruff",
  "mypy"
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# Optional: uv-specific settings (safe to omit)
[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/timeseries_lab"]
